# eddy

./: Makefile  README.md  pyproject.toml
eddy/: __init__.py  graph.py  helpers.py  index.py
eddy/generator/: clusters.py  messages.py
tests/: __init__.py  helpers.py  test_add_query.py  test_graph.py  test_helpers.py  test_index.py
